--- a/package.json
+++ b/package.json
@@ -3,20 +3,20 @@
   "version": "0.2.5",
   "description": "A sample Node.js app using Express 4",
   "engines": {
-    "node": "6.1.0"
+    "node": "14.15.3"
   },
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "body-parser": "1.15.2",
+    "body-parser": "^1.19.0",
     "cool-ascii-faces": "1.3.4",
+    "cors": "^2.8.5",
     "ejs": "2.4.1",
-    "express": "4.13.3",
-	 "body-parser":"1.15.2",
+    "express": "^4.17.1",
     "nodemailer": "2.7.0",
-    "pg": "4.x"
+    "pg": "8.5.1"
   },
   "repository": {
     "type": "git",
